# ragy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_COMPLETE.md  README-DOCKER.md  README-RAILWAY.md  README.md  ZVEC_MIGRATION.md  clean_migrate_to_zvec.py  clean_migrate_to_zvec_auto.py  demo_seed.py  docker-compose.yml  install.sh  main.py  migrate_chromadb_to_zvec.py  pyproject.toml  railway.json  test_api_zvec.sh  test_cli_commands.sh  test_max_results.py  test_yfinance_integration.py  test_zvec_integration.py
conn_bright_data/: __init__.py  client.py  test_client.py
conn_db/: CHROMA_REFERENCE.md  __init__.py  client.py  example_usage.py  test_client.py
conn_emb/: SETUP.md  client.py  test_client.py
conn_emb_hugging_face/: SETUP.md  client.py  test_client.py
conn_emb_ollama/: SETUP.md  client.py  test_client.py
conn_llm/: chat.py  client.py  mcp_config.py  setup_test_data.py  system_prompt.py  test_client.py  test_conversation.py  test_with_tools.py
conn_tavily/: client.py  test_client.py
conn_yfinance/: client.py  test_client.py  yfinance_examples.py
conn_zvec/: README.md  client.py  test_client.py
docs/screenshots/: README.md
ragy_api/: config.py  constants.py  dependencies.py  job_store.py  main.py  middleware_demo.py  models.py  scheduler.py
ragy_api/routers/: database.py  extract.py  index.py  search.py  system.py  upload.py
ragy_api/services/: database_service.py  extract_service.py  index_service.py  search_service.py
ragy_cli/: api_client.py  cli.py  commands.py  constants.py  handlers.py
ragy_creator/: client.py  test_client.py
ragy_extractor/: client.py  test_client.py
ragy_manager/: ragy_manager.py  test_ragy_manager.py
ragy_mcp/: server.py
ragy_ui/: PLAN.md  __main__.py  app.css  app.py  constants.py
sample_data/: load_data.py
