[project]
name = "ragyapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "chromadb>=1.5.5",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.0.0",
    "litellm>=1.0.0",
    "textual>=8.2.1",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
ragy = "ragy_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ragy_*", "conn_*"]
