[project]
name = "ragyapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "chromadb>=1.5.5",
    "zvec>=0.1.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.0.0",
    "litellm>=1.0.0",
    "textual>=8.2.1",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "plotext>=5.2.8",
    "mcp>=0.9.0",
    "yfinance>=0.2.40",
    "brightdata>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
ragy = "ragy_cli.cli:main"
ragy-mcp = "ragy_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ragy_*", "ragy_mcp", "conn_*", "sample_data"]
